--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tdesign-icons-vue-next": "^0.3.4",
     "tdesign-vue-next": "^1.11.4",
     "telnet-client": "^2.2.5",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
