feat: 添加日志查看器及自动上传功能
- 新增日志查看器组件，支持查看和打开日志文件
- 添加pino日志库，实现任务执行日志记录
- 支持自动上传日志文件到SVN
- 优化任务执行流程，增加@sleep命令支持
- 改进任务停止逻辑，支持手动中止任务

--- a/configs/demo.yaml
+++ b/configs/demo.yaml
@@ -11,6 +11,16 @@ cmd_timeout: 10
 
 cmd:
   - "shutdown"
+  - "@sleep 5"
   - "no shutdown"
 
+# 不期望回显
+unexpected:
+  - "%Invalid"
+  - "%Error"
+  - "%Wrong"
+  - "%Refuse"
+  - "%Conflict"
+  - "%Failed"
+  - "(psh)"  # 网管挂了
 
