--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "electron-conf": "^1.3.0",
     "electron-log": "^5.3.2",
     "electron-updater": "^6.3.9",
     "pino": "^9.6.0",
